wip test isBlank fix